crates/alder-parse/src/snapshots/alder_parse__statement__tests__array_after_newline_is_new_stmt.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    foo()\n    [1, 2]\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 10,
                    },
                },
                value: Expr(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 8,
                                    },
                                },
                                value: Var(
                                    "foo",
                                ),
                            },
                            arguments: [],
                        },
                    },
                ),
            },
        ],
        tail: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 11,
                    },
                },
                value: Array(
                    [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 6,
                                },
                                end: Position {
                                    line: 3,
                                    column: 7,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 1.0,
                                    text: "1",
                                },
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 9,
                                },
                                end: Position {
                                    line: 3,
                                    column: 10,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 2.0,
                                    text: "2",
                                },
                            ),
                        },
                    ],
                ),
            },
        ),
    },
}
