crates/alder-parse/src/snapshots/alder_parse__statement__tests__assert_comparison.snap
---
source: crates/alder-parse/src/statement.rs
description: "assert add(1, 2) == 3"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 22,
        },
    },
    value: Assert(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 22,
                },
            },
            value: BinOps {
                operands: [
                    BinOpOperand {
                        expr: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 8,
                                },
                                end: Position {
                                    line: 1,
                                    column: 17,
                                },
                            },
                            value: Call {
                                function: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 8,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 11,
                                        },
                                    },
                                    value: Var(
                                        "add",
                                    ),
                                },
                                arguments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 12,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 13,
                                            },
                                        },
                                        value: Number(
                                            NumberLit {
                                                value: 1.0,
                                                text: "1",
                                            },
                                        ),
                                    },
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 15,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 16,
                                            },
                                        },
                                        value: Number(
                                            NumberLit {
                                                value: 2.0,
                                                text: "2",
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                        op: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 18,
                                },
                                end: Position {
                                    line: 1,
                                    column: 20,
                                },
                            },
                            value: Eq,
                        },
                    },
                ],
                last: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 21,
                        },
                        end: Position {
                            line: 1,
                            column: 22,
                        },
                    },
                    value: Number(
                        NumberLit {
                            value: 3.0,
                            text: "3",
                        },
                    ),
                },
            },
        },
    ),
}
