crates/alder-parse/src/snapshots/alder_parse__statement__tests__assert_simple.snap
---
source: crates/alder-parse/src/statement.rs
description: assert ok
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Assert(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: Var(
                "ok",
            ),
        },
    ),
}
