crates/alder-parse/src/snapshots/alder_parse__statement__tests__assign_field.snap
---
source: crates/alder-parse/src/statement.rs
description: "user.name = \"Ada\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Assign {
        place: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: Place {
                root: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: "user",
                },
                steps: [
                    Field(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 6,
                                },
                                end: Position {
                                    line: 1,
                                    column: 10,
                                },
                            },
                            value: "name",
                        },
                    ),
                ],
            },
        },
        op: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 11,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: Set,
        },
        value: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 13,
                },
                end: Position {
                    line: 1,
                    column: 18,
                },
            },
            value: Str(
                "Ada",
            ),
        },
    },
}
