crates/alder-parse/src/snapshots/alder_parse__statement__tests__assign_index.snap
---
source: crates/alder-parse/src/statement.rs
description: "items[i] = 1"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: Assign {
        place: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: Place {
                root: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: "items",
                },
                steps: [
                    Index(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 7,
                                },
                                end: Position {
                                    line: 1,
                                    column: 8,
                                },
                            },
                            value: Var(
                                "i",
                            ),
                        },
                    ),
                ],
            },
        },
        op: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 10,
                },
                end: Position {
                    line: 1,
                    column: 11,
                },
            },
            value: Set,
        },
        value: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 12,
                },
                end: Position {
                    line: 1,
                    column: 13,
                },
            },
            value: Number(
                NumberLit {
                    value: 1.0,
                    text: "1",
                },
            ),
        },
    },
}
