crates/alder-parse/src/snapshots/alder_parse__statement__tests__assign_tuple_index.snap
---
source: crates/alder-parse/src/statement.rs
description: pair.0 = 1
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Assign {
        place: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Place {
                root: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: "pair",
                },
                steps: [
                    TupleIndex(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 6,
                                },
                                end: Position {
                                    line: 1,
                                    column: 7,
                                },
                            },
                            value: 0,
                        },
                    ),
                ],
            },
        },
        op: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: Set,
        },
        value: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 10,
                },
                end: Position {
                    line: 1,
                    column: 11,
                },
            },
            value: Number(
                NumberLit {
                    value: 1.0,
                    text: "1",
                },
            ),
        },
    },
}
